--- a/css/default.css
+++ b/css/default.css
@@ -3,6 +3,8 @@
     background-color: #121212;
     overflow-x: hidden;
     --block-color: rgb(51, 51, 51)
+    --light-mode-color: aliceblue;
+    --dark-mode-color: #121212;
 }
 
 /* Display-P3 color, when supported. */
@@ -90,4 +92,8 @@ header > nav > ul > li {
 header > nav > ul > li > a {
     text-decoration: none; 
     font-weight: bold;
+}
+
+form > fieldset > input, select, textarea {
+    color:var(--dark-mode-color);
 }
