--- a/css/default.css
+++ b/css/default.css
@@ -1,10 +1,15 @@
 
 :root{
-    background-color: #121212;
+    --background-c: #121212;
+    --header-c: #2c2c2c;
+    --text-c: aliceblue;
+    background-color:var(--background-c, #121212);
     overflow-x: hidden;
-    --block-color: rgb(51, 51, 51)
+    --block-color: rgb(51, 51, 51);
     --light-mode-color: aliceblue;
     --dark-mode-color: #121212;
+    font-family: Arial, Helvetica, sans-serif;
+    color:aliceblue;
 }
 
 /* Display-P3 color, when supported. */
@@ -17,7 +22,7 @@
 
 * {
     font-family: Arial, Helvetica, sans-serif;
-    color:aliceblue;
+    color:var(--text-c, aliceblue);
     
 }
 
@@ -32,7 +37,7 @@ body > main {
 }
 
 header {
-    background-color:#2c2c2c;
+    background-color:var(--header-c, aliceblue);;
     padding-left: 20px;
     position: sticky;
     top: 0px;
@@ -79,8 +84,9 @@ header > nav > ul {
     padding: 0;
 }
 
-header > nav > ul > li:not(:first-child):before {
-    content: "|";
+
+header > nav > ul > li:not(:first-child):not(:last-child):before {
+    /*content: "|";*/
     margin-left: 5px;
 }
 
